--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@gravity-ui/uikit": "^4.0.7",
     "eslint": "^8.35.0",
     "prettier": "^2.8.4",
-    "stylelint": "^14.16.1"
+    "stylelint": "^14.16.1",
+    "typescript-plugin-css-modules": "^4.2.2"
   }
 }
