--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "jsx": "react",
     "baseUrl": ".",
     "resolveJsonModule": true,
-    "importHelpers": true
+    "importHelpers": true,
+    "plugins": [{"name": "typescript-plugin-css-modules"}]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
