feat: first implementation of Link Generator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "allowJs": true,
     "outDir": "build/esm",
+    "strict": true,
     "module": "esnext",
     "jsx": "react",
     "baseUrl": ".",
