--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Helper App for Business Secrets Dev-team",
   "homepage": "https://khizrim.github.io/business-secrets-helper/",
   "author": "khizrim",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@types/node": "^16.18.12",
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@gravity-ui/eslint-config": "^2.0.0",
+    "@gravity-ui/icons": "^1.1.0",
     "@gravity-ui/prettier-config": "^1.0.1",
     "@gravity-ui/stylelint-config": "^2.0.0",
     "@gravity-ui/tsconfig": "^1.0.0",
