--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,13 +31,15 @@ jobs:
         uses: actions/configure-pages@v3
 
       - name: Install Dependencies
-        run: npm install
+        run: |
+          npm install -g pnpm
+          pnpm install
 
       - name: Run ESLint
-        run: npm run lint
+        run: pnpm lint
 
       - name: Build Website
-        run: npm run build
+        run: pnpm build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
