build: migrate to Vite

--- a/package.json
+++ b/package.json
@@ -1,54 +1,33 @@
 {
   "name": "business-secrets-helper",
   "description": "Helper App for Business Secrets Dev-team",
-  "homepage": "https://khizrim.github.io/business-secrets-helper/",
   "author": "khizrim",
   "version": "0.0.1",
+  "type": "module",
   "private": true,
+  "scripts": {
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
+  },
   "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.2.0",
+    "typescript-eslint": "^8.6.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.10.0",
+    "@gravity-ui/icons": "^2.8.1",
+    "@gravity-ui/uikit": "^6.1.0",
+    "@stylistic/eslint-plugin": "^2.8.0",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^5.3.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "lint:styles": "stylelint '{styles,src}/**/*.css'",
-    "lint:prettier": "prettier --check '**/*.md'",
-    "lint": "pnpm lint:js && pnpm lint:prettier"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@gravity-ui/eslint-config": "^3.1.1",
-    "@gravity-ui/icons": "^2.8.1",
-    "@gravity-ui/prettier-config": "^1.1.0",
-    "@gravity-ui/stylelint-config": "^4.0.1",
-    "@gravity-ui/tsconfig": "^1.0.0",
-    "@gravity-ui/uikit": "^6.1.0",
-    "eslint": "^8.56.0",
-    "prettier": "^3.2.5",
-    "stylelint": "^16.2.1",
-    "typescript-plugin-css-modules": "^5.1.0"
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^9.10.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.4.6",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
