--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,7 +2,7 @@ name: Build and Deploy
 
 on:
   push:
-    branches: ['master']
+    branches: ["master"]
 
   workflow_dispatch:
 
@@ -44,7 +44,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: './build'
+          path: "./build"
 
       - name: Deploy to GitHub Pages
         id: deployment
