--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,24 @@
 {
-  "extends": "@gravity-ui/tsconfig/tsconfig",
   "compilerOptions": {
-    "allowJs": true,
-    "outDir": "build/esm",
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
     "strict": true,
-    "module": "esnext",
-    "jsx": "react",
-    "baseUrl": ".",
-    "resolveJsonModule": true,
-    "importHelpers": true,
-    "plugins": [{"name": "typescript-plugin-css-modules"}]
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src"]
 }
